# cvAutoTrack-ResourceBuild

./: .gitignore  CMakeLists.txt
src/: BlockMapResource.h  CMakeLists.txt  MapItemSet.h  main.cpp
src/get_item_json/: CMakeLists.txt  main.cpp
